--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Copyright (C) 2000-2001  Qualcomm Incorporated
 Copyright (C) 2002-2003  Maxim Krasnyansky <maxk@qualcomm.com>
 Copyright (C) 2002-2010  Marcel Holtmann <marcel@holtmann.org>
 
-
+// Kartikey Raghav
 Compilation and installation
 ============================
 
